k3s/cluster/apps/nas-attached/navidrome/core/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
  namespace: navidrome
spec:
  ingressClassName: traefik
  rules:
    - host: music.dege.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: navidrome
                port:
                  number: 80
